stop button flickering on first hover

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,7 +40,13 @@ button {
 
 button:hover {
     background-image: url(../images/button_hovered.png);
-    background-color: blue;
+}
+/* Element exists purely to pre-fetch the hovered background image to avoid flickering when first hovering over the button */
+button:before{
+    content: '';
+    width: 0;
+    height: 0;
+    background-image: url(../images/button_hovered.png);
 }
 
 /* This is at the bottom because the multiline string breaks vscode's syntax highlighting for all following lines */
